fixed navbar text going off screen under 500px

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -1,12 +1,9 @@
 * {
   font-family: 'Oswald', sans-serif;
 }
-/* Base navbar including dark mode*/
+/* Base navbar*/
 .navbar {
   background-color: #F65275;
-}
-.content-dark .navbar {
-  background-color: black;
 }
 .jj {
   width: 100%;
@@ -15,10 +12,8 @@ span.navbar-brand {
   color: #fff;
   font-size: 2vh;
 }
-.content-dark span.navbar-brand {
-  color: #F65275;
-}
-/* Navbar links including dark mode*/
+
+/* Navbar links*/
 .something2 {
   color: black!important;
 }
@@ -28,9 +23,22 @@ span.navbar-brand {
   text-decoration: none;
   padding-left: 6%;
 }
+.navLinks:hover {
+  color: #E9E186;
+}
+/* MOBILE RESPONSIVENESS */
+@media screen and (max-width: 500px){
+  .navLinks {
+    padding: 2%;
+  }
+}
+/* DARK MODE */
+.content-dark span.navbar-brand {
+  color: #F65275;
+}
 .content-dark .navLinks {
   color: #F65275;
 }
-.navLinks:hover {
-  color: #E9E186;
+.content-dark .navbar {
+  background-color: black;
 }
